updated layout design and fixed color combination for light and dark mode and added animation

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,10 +3,15 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    --background: 120 100% 97%; /* Light mode: a soft greenish background */
+  }
+  .dark {
+   --background: 228 90% 8%;
+  }
   * {
     @apply border-border;
   }
-
   body {
     @apply font-sans antialiased bg-background text-foreground;
   }
